--- a/src/ImageCard.css
+++ b/src/ImageCard.css
@@ -1,10 +1,8 @@
 .hide {
     display: none;
-}
-
-.hoverCard {
     position: absolute;
-    z-index: 1;
+    transform: translate(100px, -140px);
+    z-index: 3;
 }
 
 .imageCard:hover + .hide {
